FIX Off-center spinner

--- a/scss/priceCalculator.scss
+++ b/scss/priceCalculator.scss
@@ -24,7 +24,7 @@ price-calculator {
 
   .spinner-block {
     background: $light;
-    position: absolute;
+    // position: absolute;
     text-align: center;
     padding: 1em 0;
     width: 100%;
